// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EmptyState - Visual Regression > renders default empty state 1`] = `
<div>
  <div
    class="css-ycsear"
  >
    <div
      class="chakra-stack css-o51fhk"
    >
      <svg
        class="chakra-icon css-ag8yex"
        fill="none"
        focusable="false"
        height="1em"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="22 12 16 12 14 15 10 15 8 12 2 12"
        />
        <path
          d="M5.45 5.11L2 12v6a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2v-6l-3.45-6.89A2 2 0 0 0 16.76 4H7.24a2 2 0 0 0-1.79 1.11z"
        />
      </svg>
      <h2
        class="chakra-heading css-1l49ion"
      >
        No items found
      </h2>
      <p
        class="chakra-text css-id8xfi"
      >
        Try adjusting your search.
      </p>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</div>
`;

exports[`EmptyState - Visual Regression > renders with action button 1`] = `
<div>
  <div
    class="css-ycsear"
  >
    <div
      class="chakra-stack css-o51fhk"
    >
      <svg
        class="chakra-icon css-ag8yex"
        fill="none"
        focusable="false"
        height="1em"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="22 12 16 12 14 15 10 15 8 12 2 12"
        />
        <path
          d="M5.45 5.11L2 12v6a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2v-6l-3.45-6.89A2 2 0 0 0 16.76 4H7.24a2 2 0 0 0-1.79 1.11z"
        />
      </svg>
      <h2
        class="chakra-heading css-1l49ion"
      >
        No credit entries
      </h2>
      <p
        class="chakra-text css-id8xfi"
      >
        Create your first entry.
      </p>
      <button
        class="chakra-button css-jut409"
        type="button"
      >
        Create Entry
      </button>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</div>
`;

exports[`EmptyState - Visual Regression > renders without description 1`] = `
<div>
  <div
    class="css-ycsear"
  >
    <div
      class="chakra-stack css-o51fhk"
    >
      <svg
        class="chakra-icon css-ag8yex"
        fill="none"
        focusable="false"
        height="1em"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="22 12 16 12 14 15 10 15 8 12 2 12"
        />
        <path
          d="M5.45 5.11L2 12v6a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2v-6l-3.45-6.89A2 2 0 0 0 16.76 4H7.24a2 2 0 0 0-1.79 1.11z"
        />
      </svg>
      <h2
        class="chakra-heading css-1l49ion"
      >
        Nothing here
      </h2>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</div>
`;
